# authentication_service

./: .env  .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: tests.yml
.sqlx/: query-3e320f021f38b70d25f6787678a69cab5446ae92e65af1e7f75bec6c8de39955.json  query-4107e55d4b7afd9fe1e44d40b786c6f9c0fde950d5ca750d77ca61c116971960.json  query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json  query-f3f58600e971f1be6cbe206bba24f77769f54c6230e28f5b3dc719b869d9cb3f.json
migrations/: 20240612153749_init.up.sql
scripts/: init_db.sh
src/: app.rs  application.rs  lib.rs  main.rs  service.rs
src/api/: healthcheck.rs  mod.rs  register.rs
src/api/endpoints/: get_me.rs  healthcheck.rs  login.rs  logout.rs  mod.rs  refresh.rs  register.rs
src/api/middlewares/: authentication.rs
src/api/model/: api_error.rs  mod.rs
src/api/schemas/: login_user.rs  register_user.rs
src/api/utils/: jwt.rs  mod.rs  password_hasher.rs  security.rs  status.rs
src/domain/: auth_service.rs  mod.rs
src/domain/model/: auth.rs  auth_middleware.rs  auth_repo_errors.rs  cache_errors.rs  login_response.rs  login_user.rs  mod.rs  refresh_token.rs  register_user.rs  token.rs  user.rs  user_id.rs
src/domain/repositories/: auth_repository.rs  cache_repository.rs
src/helper/: config.rs  mod.rs  redis_helper.rs
src/model/: api_error.rs  api_response.rs  auth.rs  auth_middleware.rs  cache_errors.rs  login_response.rs  login_user.rs  logout.rs  mod.rs  register_user.rs  token.rs  token_uuid.rs  user.rs  user_email.rs  user_password.rs
src/repositories/: auth_repository.rs  cache_repository.rs  mod.rs
src/repositories/test_helpers/: mock_auth_repository.rs  mock_cache_repository.rs  mod.rs
src/service/: auth_service.rs  mod.rs  tests.rs
src/utils/: status.rs
tests/: integration_test.rs
