[package]
name = "authentication_service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
