[package]
name = "authentication_service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sqlx = { version = "0.7.4", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
tokio = { version = "1.38.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }
