[package]
name = "authentication_service"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
reqwest = { version = "0.12.4", features = ["json"] }

[dependencies]
anyhow = "1.0.86"
argon2 = "0.5.3"
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["cookie"] }
base64 = "0.22.1"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
rand_core = { version = "0.6.4", features = ["std"] }
redis = { version = "0.25.4", features = ["tokio-comp"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sqlx = { version = "0.7.4", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
time = "0.3.36"
tokio = { version = "1.38.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }
